Implement chat application with FastAPI and Azure integration; add agent prompts for Customer Loyalty, Interior Design, Inventory, and Shopper agents; enhance logging and error handling; optimize image description caching and product recommendation processes.

--- a/docs/01_deploy_configure_resources/01_01.md
+++ b/docs/01_deploy_configure_resources/01_01.md
@@ -160,15 +160,15 @@ Next, retrieve the names of your Azure AI Search, Cosmos DB resources, and Azure
 
 ```bash
 resourceGroup="techworkshop-l300-ai-agents"
-cosmosDbAccountName="{YOUR_COSMOS_DB_ACCOUNT_NAME}"
+cosmosDbAccountName="umqut7mmjgn76-cosmosdb"
 # This is the name of your Azure AI Search account. It will be something like xxxxxxxxxxxxx-search
-aiSearchName="{YOUR_AZURE_AI_SEARCH_NAME}"
+aiSearchName="umqut7mmjgn76-search"
 # This is the name of your Azure AI Foundry account. It will be something like xxxxxxxxxxxxx
 # In the deployment script, the Type is Microsoft.CognitiveServices/accounts
-aiFoundryName="{YOUR_AZURE_AI_FOUNDRY_NAME}"
+aiFoundryName="aif-umqut7mmjgn76"
 # This is the name of your Azure AI Foundry project. It will be something like proj-xxxxxxxxxx.
 # Its Type in the deployment script is Microsoft.CognitiveServices/accounts/projects
-aiProjectName="{YOUR_AZURE_AI_FOUNDRY_PROJECT_NAME}"
+aiProjectName="proj-umqut7mmjgn76"
 ```
 
 Once you have these variables set, run the following commands. This script first retrieves the principal ID of the signed-in user, then enables the system-assigned managed identity for the Azure AI Search resource. After that, it retrieves the principal ID of the managed identity and assigns the necessary roles to both the signed-in user and the managed identity to allow access to Cosmos DB and Azure AI Foundry.
