--- a/docs/04_observability_ai_foundry/04_02.md
+++ b/docs/04_observability_ai_foundry/04_02.md
@@ -111,7 +111,7 @@ To conclude this task, you will deploy the latest version of the application to 
 In order to deploy the latest version of the application to production, first ensure that all files are saved. Then, in the terminal, navigate to the `src` directory of your project if you are not already there. Stop the Uvicorn server if it is still running by pressing `Ctrl+C`. Then, build the Docker image by running the following command:
 
 ```bash
-docker build -t {YOUR_REGISTRY_NAME}.acurecr.io/chat-app:latest .
+docker build -t {YOUR_REGISTRY_NAME}.azurecr.io/chat-app:latest .
 ```
 
 Next, push the Docker image to your Azure Container Registry by running the following command:
